@startuml
'https://plantuml.com/class-diagram
Solution45 *-- ReadFile
Solution45 *-- writeFile

class Solution45 {
main()
}

class ReadFile {
-List : String
-Scanner in
+readFile()
+void readFromFile()
+List<String> getList()

}
class writeFile {
-FileWriter writer
-List : String
+writeFile()
+void writeToFile()
}

@enduml